# WeightAndBalance

./: Airplane.cpp  Airplane.h  AirplaneLoader.cpp  AirplaneLoader.h  CMakeLists.txt  README.md  WeightAndBalance.cpp  WeightAndBalance.h  main.cpp
HelloWorld/: HelloWorld.cpp
aircraft/: c172s.json
output/: output.txt
